--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-json": "^2.0.0",
     "swagger-ui-express": "^5.0.1"
   }
 }
