Commit 5: -> Updated Separate .gitignore for node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/material_theme_project_new.xml
 /node_modules/@apidevtools/json-schema-ref-parser/lib/parsers/binary.js
 /node_modules/@apidevtools/json-schema-ref-parser/lib/parsers/json.js
 /node_modules/@apidevtools/json-schema-ref-parser/lib/parsers/text.js
