--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-json": "^2.0.0",
     "swagger-ui-express": "^5.0.1"
-  }
+  },
+  "type": "module"
 }
