--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /material_theme_project_new.xml
+.env
 /node_modules/@apidevtools/json-schema-ref-parser/lib/parsers/binary.js
 /node_modules/@apidevtools/json-schema-ref-parser/lib/parsers/json.js
 /node_modules/@apidevtools/json-schema-ref-parser/lib/parsers/text.js
